# AuroraNexus

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  format-code.sh  run-tests.sh  run.sh
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
include/: include.cmake
include/aurora-nexus/infrastructure/network/http/: http-server.hpp  request.hpp
include/aurora-nexus/infrastructure/network/thread-pool/: task.h  thread-pool-node.h  thread-pool.hpp
include/aurora-nexus/infrastructure/network/websocket/: websocket.hpp
src/: main.cpp  sources.cmake  tmp.cpp
src/infrastructure/database_repositories/: aurora_mysql_connection.hpp  database_service.hpp
src/infrastructure/network/http/: http-server.cpp  request.cpp
src/infrastructure/network/thread-pool/: thread-pool-node.cpp  thread-pool.cpp
src/infrastructure/network/websocket/: websocket.cpp
src/interfaces/: database_connection.hpp
test/: CMakeLists.txt
test/src/: request-tests.cpp  test-sources.cmake  threadpool-tests.cpp  tmp_test.cpp
